--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="icon.jpg" />
 </head>
 
-<body>
+<body onmousedown="return false" onselectstart="return false">
 
     <div id="terminal">
         <a id="before"></a>
